# libmpi4pyscf

./: .copier-answers.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml
docs/: conf.py  index.md
src/: main.cpp
src/libmpi4pyscf/: __init__.py
tests/: test_compiled.py  test_package.py
